[gd_scene load_steps=11 format=3 uid="uid://b4n33w5u131ad"]

[ext_resource type="Script" path="res://Scripts/MainGame.gd" id="1_752o5"]
[ext_resource type="Script" path="res://Scripts/Logic/pond_button.gd" id="3_q5j8n"]
[ext_resource type="PackedScene" uid="uid://b10aaiq8do5d3" path="res://Scenes/fishman.tscn" id="3_uk58l"]
[ext_resource type="Script" path="res://Scripts/Scenes/pond_tutorial.gd" id="5_npxem"]
[ext_resource type="Script" path="res://Scripts/Scenes/catching_tutorial.gd" id="6_fp04f"]
[ext_resource type="Texture2D" uid="uid://bwtjcgps2taq" path="res://Sprites/hooked.png" id="7_7tew4"]
[ext_resource type="AudioStream" uid="uid://dc24xxjqecf1m" path="res://Sound/A Fishy Relaxation Draft 1.mp3" id="8_af65p"]
[ext_resource type="Script" path="res://Scripts/SFX/hooked_sfx.gd" id="8_bo4n2"]
[ext_resource type="PackedScene" uid="uid://b24jd202bvus0" path="res://Scenes/stats.tscn" id="8_ygjqi"]
[ext_resource type="AudioStream" uid="uid://cduge3er5hfgj" path="res://Sound/Keewy_Hooked.mp3" id="9_g35vk"]

[node name="Game Background Node" type="Node2D"]
script = ExtResource("1_752o5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="BoxContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(0, 135)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -135.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Idle" type="CheckButton" parent="CanvasLayer/HBoxContainer"]
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 24
action_mode = 0
text = "Auto"

[node name="Control2" type="Control" parent="CanvasLayer/HBoxContainer"]
custom_minimum_size = Vector2(70, 140)
layout_mode = 2
size_flags_horizontal = 8

[node name="Fishman" parent="CanvasLayer/HBoxContainer/Control2" instance=ExtResource("3_uk58l")]

[node name="ButtonGroup" type="BoxContainer" parent="CanvasLayer/HBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/ButtonGroup"]
layout_mode = 2
alignment = 2

[node name="PondTutorial" type="RichTextLabel" parent="CanvasLayer/HBoxContainer/ButtonGroup/VBoxContainer"]
visible = false
layout_mode = 2
text = "Hey! you should try fishing in water instead. Here, grab this pond and drag it over to your fisher!"
fit_content = true
script = ExtResource("5_npxem")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/ButtonGroup/VBoxContainer"]
layout_mode = 2

[node name="Pond" type="Button" parent="CanvasLayer/HBoxContainer/ButtonGroup/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "pond"
script = ExtResource("3_q5j8n")

[node name="Gutscha" type="Button" parent="CanvasLayer/HBoxContainer/ButtonGroup/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24
action_mode = 0
text = "Gutscha"

[node name="Center" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="FishCaught" type="RichTextLabel" parent="CanvasLayer/Center"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="HookedSprite" type="Sprite2D" parent="CanvasLayer/Center"]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_7tew4")
script = ExtResource("8_bo4n2")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -64.0
offset_bottom = 64.0
grow_horizontal = 0
grow_vertical = 2

[node name="CatchingTutorial" type="RichTextLabel" parent="CanvasLayer/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(300, 48)
layout_mode = 2
text = "Hey fish. fans! Hope youre ready to fish! make sure to pull the rod in the opposite direction the fish is going using the arrow keys, and holding down to give it a good yank when its tired!

When you hook a fish, press start to start reeling it in!"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
script = ExtResource("6_fp04f")

[node name="Stats" parent="CanvasLayer" instance=ExtResource("8_ygjqi")]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_af65p")
autoplay = true
parameters/looping = true

[node name="Hooked" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_g35vk")

[connection signal="pressed" from="CanvasLayer/HBoxContainer/ButtonGroup/VBoxContainer/HBoxContainer/Pond" to="." method="_on_pond_pressed"]

[editable path="CanvasLayer/HBoxContainer/Control2/Fishman"]
[editable path="CanvasLayer/Stats"]
